--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -158,6 +158,7 @@ CONFIG_DEFAULT_luci-app-wol=y
 CONFIG_DEFAULT_luci-app-xlnetacc=y
 CONFIG_DEFAULT_luci-app-zerotier=y
 CONFIG_DEFAULT_luci-newapi=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_DEFAULT_luci-proto-bonding=y
 CONFIG_DEFAULT_mkf2fs=y
 CONFIG_DEFAULT_mtd=y
